--- a/public/index.html
+++ b/public/index.html
@@ -10,19 +10,16 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 </head>
 <body>
-  <h1>BQ SAYS HI</h1>
+  <h1>Starlings San Gabriel Team Manager</h1>
 
-  <input type="text" id="message">
+  <input type="text" placeholder="Enter Team (12s, 14s)" id="message">
   <button id="createPost">Create</button>
 
   <div id="posts"></div>
 
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  Enter your teams name (for example 16s Bringas) if it doesn't already exist.
+  If it does, click on it to manage your team's schedule, roster and results
+  page.
 
   <script id="posts-template" type="text/template">
   <ul>
