added skeleton for all pages (/teams, /roster, /results, /schedule)

--- a/public/schedule.html
+++ b/public/schedule.html
@@ -27,8 +27,8 @@
 
   <h1>Schedule</h1>
 
-  <input type="text" placeholder="Enter Team (12s, 14s)" id="message">
-  <button id="createPost">Create</button>
+  <input type="text" placeholder="Enter Schdule" id="sch">
+  <button id="createSch">Create Schedule</button>
 
 
   <div id="posts"></div>
@@ -37,10 +37,6 @@
   If it does, click on it to manage your team's schedule, roster and results
   page.</p>
 
-
-
-  <a href="/results.html">Results Page</a>
-
   <button type="button" class="edit" aria-label="Left Align">
   <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
 
@@ -48,9 +44,6 @@
   <button type="button" class="x" aria-label="Left Align">
   <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
   </button>
-
-  <a href="/roster.html">Roster Page</a>
-  <a href="/schedule.html">Schedule Page</a>
 
   <script id="posts-template" type="text/template">
   <ul>
