--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <h1>Starlings San Gabriel Team Manager</h1>
 
   <input type="text" placeholder="Enter Team (12s, 14s)" id="message">
-  <button id="createPost">Create</button>
+  <button id="createPost">Add Team</button>
 
 
   <div id="posts"></div>
@@ -38,9 +38,6 @@
   page.</p>
 
 
-
-  <a href="/results.html">Results Page</a>
-
   <button type="button" class="edit" aria-label="Left Align">
   <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
 
@@ -48,9 +45,6 @@
   <button type="button" class="x" aria-label="Left Align">
   <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
   </button>
-
-  <a href="/roster.html">Roster Page</a>
-  <a href="/schedule.html">Schedule Page</a>
 
   <script id="posts-template" type="text/template">
   <ul>
