button event listeners working

--- a/public/roster.html
+++ b/public/roster.html
@@ -33,9 +33,18 @@
 
   <div id="posts"></div>
 
- <p>Enter your teams name (for example 16s Bringas) if it doesn't already exist.
-  If it does, click on it to manage your team's schedule, roster and results
-  page.</p>
+ <p>Starlings '16-'17 Team Rosters</p>
+<table class="table table-striped table-bordered">
+  <caption class="tableTeam">Team 'insert team'</caption>
+  <thead>
+    <tr>
+      <th>First Name</th><th>Last Name</th><th>Position</th>
+    </tr>
+  </thead>
+  <tbody>
+      <td>Rielle</td><td>Avery</td><td>DS</td>
+  </tbody>
+</table>
 
   <button type="button" class="edit" aria-label="Left Align">
   <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
