--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,10 @@
 
 
   <h1>Starlings San Gabriel Team Manager</h1>
-
+  <form accept-charset="utf-8">
   <input type="text" placeholder="Enter Team (12s, 14s)" id="message">
+  <input type="text" placeholder="Enter Roster" id="roster">
+  </form>
   <button id="createPost">Add Team</button>
 
 
@@ -40,16 +42,19 @@
 
   <button type="button" class="edit" aria-label="Left Align">
   <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-
   </button>
+
   <button type="button" class="x" aria-label="Left Align">
   <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
   </button>
 
   <script id="posts-template" type="text/template">
   <ul>
+    <% var editButton = '<button type="button" class="edit" aria-label="Left Align"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>'%>
+    <% var xButton = '<button type="button" class="x" aria-label="Left Align"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>' %>
+
     <% posts.forEach(function(post) { %>
-      <li><%= post.message %><button class="edit">Edit</button><button class="x">X</button></li>
+      <li><%= post['message']['message'] + post.message.roster + editButton + xButton%></li>
     <% }) %>
   </ul>
   </script>
