--- a/public/results.html
+++ b/public/results.html
@@ -48,7 +48,8 @@
   <script id="posts-template" type="text/template">
   <ul>
     <% posts.forEach(function(post) { %>
-      <li><%= post.message %><button class="edit">Edit</button><button class="x">X</button></li>
+    <% var teams = post.teams %>
+      <li><%= teams.teamName + ": " + teams.roster + editButton + xButton%></li>
     <% }) %>
   </ul>
   </script>
