--- a/public/results.html
+++ b/public/results.html
@@ -27,31 +27,23 @@
 
   <h1>Results</h1>
 
-  <input type="text" placeholder="Enter Team (12s, 14s)" id="message">
+  <input type="text" placeholder="Enter Results (3-0)" id="results">
   <button id="createPost">Create</button>
 
 
-  <div id="posts"></div>
+  <div id="posts">
+    <script id="posts-template" type="text/template">
+    <ul>
+      <% posts.forEach(function(post) { %>
+      <% var teams = post.teams %>
+        <li><%= teams.teamName + ": " + teams.roster + editButton + xButton%></li>
+      <% }) %>
+    </ul>
+  </div>
 
- <p>Enter your teams name (for example 16s Bringas) if it doesn't already exist.
-  If it does, click on it to manage your team's schedule, roster and results
-  page.</p>
+ <p>Enter your team's Results (for example Q1: 3-0, 1st Place)</p>
 
-  <button type="button" class="edit" aria-label="Left Align">
-  <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
 
-  </button>
-  <button type="button" class="x" aria-label="Left Align">
-  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-  </button>
-
-  <script id="posts-template" type="text/template">
-  <ul>
-    <% posts.forEach(function(post) { %>
-    <% var teams = post.teams %>
-      <li><%= teams.teamName + ": " + teams.roster + editButton + xButton%></li>
-    <% }) %>
-  </ul>
   </script>
   <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="main.js"></script>
