--- a/public/teams.html
+++ b/public/teams.html
@@ -30,27 +30,18 @@
   <input type="text" placeholder="Enter Team (12s, 14s)" id="message">
   <button id="createPost">Create</button>
 
-
   <div id="posts"></div>
 
  <p>Enter your teams name (for example 16s Bringas) if it doesn't already exist.
   If it does, click on it to manage your team's schedule, roster and results
   page.</p>
 
-  <button type="button" class="edit" aria-label="Left Align">
-  <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-
-  </button>
-  <button type="button" class="x" aria-label="Left Align">
-  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-  </button>
-
   <script id="posts-template" type="text/template">
-  <ul>
+  <ul id="teamslist">
 
     <% posts.forEach(function(post) { %>
     <% var teams = post.teams %>
-      <li><%= teams.teamName + ": " + teams.roster + editButton + xButton%></li>
+      <li><%= "<a href='/teams/" + teams.teamName + "'>" + teams.teamName + "</a>" + editButton + xButton%></li>
     <% }) %>
   </ul>
   </script>
