delete button now removes dom parent node on client side

--- a/public/index.html
+++ b/public/index.html
@@ -33,19 +33,17 @@
   <button id="createPost">Add Team</button>
 
 
-
-
-
   <div id="posts">
 
     <script id="posts-template" type="text/template">
     <ul id="teamslist">
       <% var editButton = '<button type="button" class="edit" aria-label="Left Align"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>'%>
       <% var xButton = '<button type="button" class="x" aria-label="Left Align"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>' %>
-
+      <% var html; %>
       <% posts.forEach(function(post) { %>
       <% var teams = post.teams %>
-        <li><%= teams.teamName + ": " + teams.roster + editButton + xButton%></li>
+      <% html ='<li class="list">' + teams.teamName + ": " + teams.roster + editButton + xButton + '</li>' %>
+        <%= html %>
       <% }) %>
     </ul>
     </script>
