--- a/public/teams.html
+++ b/public/teams.html
@@ -26,25 +26,22 @@
 
 
   <h1>Teams</h1>
+  <div class="dynamic">
+    <div id="posts">
+      <script id="posts-template" type="text/template">
+        <ul id="teamslist">
+          <% posts.forEach(function(post) { %>
+            <% var teams = post.teams %>
+            <% html ='<li class="list">' + "<a href='/teams/" + post.name + "'>" + post.name + "</a>" + editButton + xButton + '</li>' %>
+            <%= html %>
+          <% }) %>
+        </ul>
+      </script>
+    </div>
+   <p>Clicking on your team will redirect you to see only your roster, results and schedule</p>
+  </div>
 
-  <input type="text" placeholder="Enter Team (12s, 14s)" id="message">
-  <button id="createPost">Create</button>
 
-  <div id="posts"></div>
-
- <p>Enter your teams name (for example 16s Bringas) if it doesn't already exist.
-  If it does, click on it to manage your team's schedule, roster and results
-  page.</p>
-
-  <script id="posts-template" type="text/template">
-  <ul id="teamslist">
-
-    <% posts.forEach(function(post) { %>
-    <% var teams = post.teams %>
-      <li><%= "<a href='/teams/" + teams.teamName + "'>" + teams.teamName + "</a>" + editButton + xButton%></li>
-    <% }) %>
-  </ul>
-  </script>
   <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="main.js"></script>
 </body>
