updated roster page to render tables according to roster content

--- a/public/results.html
+++ b/public/results.html
@@ -27,9 +27,9 @@
 
   <h1>Results</h1>
 
-  <input type="text" placeholder="Enter Results (3-0)" id="results">
+<!--   <input type="text" placeholder="Enter Results (3-0)" id="results">
   <button id="createPost">Create</button>
-
+ -->
 
   <div id="posts">
     <script id="posts-template" type="text/template">
