--- a/public/schedule.html
+++ b/public/schedule.html
@@ -27,8 +27,8 @@
 
   <h1>Schedule</h1>
 
-  <input type="text" placeholder="Enter Schdule" id="sch">
-  <button id="createSch">Create Schedule</button>
+  <!-- <input type="text" placeholder="Enter Schdule" id="sch">
+  <button id="createSch">Create Schedule</button> -->
 
   <div id="posts">
     <script id="posts-template" type="text/template">
