--- a/public/roster.html
+++ b/public/roster.html
@@ -13,48 +13,51 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<div class="header">
-  <ul class="nav nav-pills">
-  <li role="presentation"><a href="/">Home</a></li>
-  <li role="presentation"><a href="/teams.html">Teams</a></li>
-  <li role="presentation" class="active"><a href="/roster.html">Roster</a></li>
-  <li role="presentation"><a href="/results.html">Results</a></li>
-  <li role="presentation"><a href="/schedule.html">Schedule</a></li>
-</ul>
-</div>
-
-
-  <h1>Roster</h1>
-
-  <input type="text" placeholder="Enter Team (12s, 14s)" id="message">
-  <button id="createPost">Create</button>
-
-
-  <div id="posts"></div>
-
- <p>Starlings '16-'17 Team Rosters</p>
-<table class="table table-striped table-bordered">
-  <caption class="tableTeam">Team 'insert team'</caption>
-  <thead>
-    <tr>
-      <th>First Name</th><th>Last Name</th><th>Position</th>
-    </tr>
-  </thead>
-  <tbody>
-      <td>Rielle</td><td>Avery</td><td>DS</td>
-  </tbody>
-</table>
-
-
-  <script id="posts-template" type="text/template">
-  <ul>
-    <% posts.forEach(function(post) { %>
-    <% var teams = post.teams %>
-      <li><%= teams.teamName + ": " + teams.roster + editButton + xButton%></li>
-    <% }) %>
+  <div class="header">
+    <ul class="nav nav-pills">
+    <li role="presentation"><a href="/">Home</a></li>
+    <li role="presentation"><a href="/teams.html">Teams</a></li>
+    <li role="presentation" class="active"><a href="/roster.html">Roster</a></li>
+    <li role="presentation"><a href="/results.html">Results</a></li>
+    <li role="presentation"><a href="/schedule.html">Schedule</a></li>
   </ul>
-  </script>
+  </div>
+ <h1>Roster</h1>
+  <p>Starlings '16-'17 Team Rosters</p>
+
+  <div id="posts">
+    <script id="posts-template" type="text/template">
+    <ul id="teamslist">
+      <% var editButton = '<button type="button" class="edit" aria-label="Left Align"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>'%>
+      <% var xButton = '<button type="button" class="x" aria-label="Left Align"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>' %>
+      <% var html; %>
+      <% posts.forEach(function(post) { %>
+          <% html ='<li class="list">' + post.name + ": " + post.roster + editButton + xButton + '</li>' %>
+        <%= html %>
+      <% }) %>
+    </ul>
+
+  <table class="table table-striped table-bordered">
+    <caption class="tableTeam">Team 'insert team'</caption>
+    <thead>
+      <tr>
+        <th>First Name</th><th>Last Name</th><th>Position</th>
+      </tr>
+    </thead>
+    <tbody>
+    <% console.log(posts) %>
+    <% posts.forEach(function(post) { %>
+      <% var html; %>
+      <% html ='<tr><td>' + post.roster + '</td><td>' + post.roster + '</td><td>' + post.roster + '</td><tr>'%>
+      <%= html %>
+    <% }) %>
+    </tbody>
+  </table>
+    </script>
+  </div>
+
+
+
   <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="main.js"></script>
 </body>
