edit button adds 2 input fields and button. clicking submit edit currently posts to db as new entry

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   <input type="text" placeholder="Enter Team (12s, 14s)" id="teamName">
   <input type="text" placeholder="Enter Roster" id="roster">
   </form>
-  <button id="createPost">Add Team</button>
+  <button id="createPost">Add Team Info</button>
 
   <div class="dynamicContent">
     <div id="posts">
