fixing edit post to allow changing team name or roster. if name changes, posts as a new entry to database. currently need to save value to a new string

--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,8 @@
       </script>
     </div>
 
-   <p>Enter your teams name (for example 16s Bringas) if it doesn't already exist.
-    If it does, click on it to manage your team's schedule, roster and results
-    page.</p>
+   <p>Enter your team's name (for example 16s Bringas) if it doesn't already exist.
+    If it does, click on the pencil icon to edit the roster or the 'X' button to delete the team</p>
     </div>
 
   <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
