object id now saved to id of li when created

--- a/public/roster.html
+++ b/public/roster.html
@@ -48,6 +48,7 @@
     <% console.log(posts) %>
     <% posts.forEach(function(post) { %>
       <% var html; %>
+      <% var rosterArr = post.roster.split(',') %>
       <% html ='<tr><td>' + post.roster + '</td><td>' + post.roster + '</td><td>' + post.roster + '</td><tr>'%>
       <%= html %>
     <% }) %>
