--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">  <title>Proj 2 crud</title>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   <script
-      src="https://code.jquery.com/jquery-3.1.1.js"
-    integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+        src="https://code.jquery.com/jquery-3.1.1.js"
+      integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+      crossorigin="anonymous">
+  </script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -19,8 +20,8 @@
   <li role="presentation" class="active"><a href="/">Home</a></li>
   <li role="presentation"><a href="/teams.html">Teams</a></li>
   <li role="presentation"><a href="/roster.html">Roster</a></li>
-  <li role="presentation"><a href="/results.html">Results</a></li>
-  <li role="presentation"><a href="/schedule.html">Schedule</a></li>
+<!--   <li role="presentation"><a href="/results.html">Results</a></li>
+  <li role="presentation"><a href="/schedule.html">Schedule</a></li> -->
 </ul>
 </div>
 
