--- a/public/roster.html
+++ b/public/roster.html
@@ -18,8 +18,6 @@
     <li role="presentation"><a href="/">Home</a></li>
     <li role="presentation"><a href="/teams.html">Teams</a></li>
     <li role="presentation" class="active"><a href="/roster.html">Roster</a></li>
-    <li role="presentation"><a href="/results.html">Results</a></li>
-    <li role="presentation"><a href="/schedule.html">Schedule</a></li>
   </ul>
   </div>
  <h1>Roster</h1>
@@ -27,21 +25,21 @@
 
   <div id="posts">
     <script id="posts-template" type="text/template">
-    <ul id="teamslist">
-      <% var editButton = '<button type="button" class="edit" aria-label="Left Align"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>'%>
-      <% var xButton = '<button type="button" class="x" aria-label="Left Align"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>' %>
-      <% var html; %>
-      <% posts.forEach(function(post) { %>
-          <% html ='<li class="list">' + post.name + ": " + post.roster + editButton + xButton + '</li>' %>
-        <%= html %>
-      <% }) %>
-    </ul>
+      <ul id="teamslist">
+        <% var editButton = '<button type="button" class="edit" aria-label="Left Align"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>'%>
+        <% var xButton = '<button type="button" class="x" aria-label="Left Align"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>' %>
+        <% var html; %>
+        <% posts.forEach(function(post) { %>
+            <% html ='<li class="list" id="' + post._id + '">' + post.name + ": " + post.roster + editButton + xButton + '</li>' %>
+          <%= html %>
+        <% }) %>
+      </ul>
 
   <table class="table table-striped table-bordered">
-    <caption class="tableTeam">Team 'insert team'</caption>
+    <caption class="tableTeam">All Teams</caption>
     <thead>
       <tr>
-        <th>First Name</th><th>Last Name</th><th>Position</th>
+        <th>Team Name</th><th>Name</th>
       </tr>
     </thead>
     <tbody>
@@ -49,7 +47,8 @@
     <% posts.forEach(function(post) { %>
       <% var html; %>
       <% var rosterArr = post.roster.split(',') %>
-      <% html ='<tr><td>' + post.roster + '</td><td>' + post.roster + '</td><td>' + post.roster + '</td><tr>'%>
+      <% console.log(rosterArr) %>
+      <% html ='<tr><td>' + post.name + '</td><td>' + post.roster + '</td><tr>'%>
       <%= html %>
     <% }) %>
     </tbody>
