--- a/public/teams.html
+++ b/public/teams.html
@@ -19,8 +19,6 @@
   <li role="presentation"><a href="/">Home</a></li>
   <li role="presentation" class="active"><a href="/teams.html">Teams</a></li>
   <li role="presentation"><a href="/roster.html">Roster</a></li>
-  <li role="presentation"><a href="/results.html">Results</a></li>
-  <li role="presentation"><a href="/schedule.html">Schedule</a></li>
 </ul>
 </div>
 
@@ -30,9 +28,11 @@
     <div id="posts">
       <script id="posts-template" type="text/template">
         <ul id="teamslist">
+          <% var editButton = '<button type="button" class="edit" aria-label="Left Align"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>'%>
+          <% var xButton = '<button type="button" class="x" aria-label="Left Align"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>' %>
+          <% var html; %>
           <% posts.forEach(function(post) { %>
-            <% var teams = post.teams %>
-            <% html ='<li class="list">' + "<a href='/teams/" + post.name + "'>" + post.name + "</a>" + editButton + xButton + '</li>' %>
+              <% html ='<li class="list" id="' + post._id + '">' + post.name + ": " + post.roster + editButton + xButton + '</li>' %>
             <%= html %>
           <% }) %>
         </ul>
