roster.html tables now updated after edits

--- a/public/roster.html
+++ b/public/roster.html
@@ -35,8 +35,8 @@
         <% }) %>
       </ul>
 
-  <table class="table table-striped table-bordered">
-    <caption class="tableTeam">All Teams</caption>
+  <table id="renderTable" class="table table-striped table-bordered">
+    <caption class="tableTeam">Make sure members in roster are seperated by a comma when editing</caption>
     <thead>
       <tr>
         <th>Team Name</th><th>Name</th>
