cleaned up css for everything to allign correctly

--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,7 @@
       </script>
     </div>
 
-   <p>Enter your team's name (for example 16s Bringas) if it doesn't already exist.
-    If it does, click on the pencil icon to edit the roster or the 'X' button to delete the team</p>
+   <p>Enter your team's <b>name</b> and <b>roster</b> (seperated by a comma). To edit, click the pencil icon. To delete, click the 'X' button</p>
     </div>
 
   <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
