started cleaning up code

--- a/public/teams.html
+++ b/public/teams.html
@@ -38,7 +38,7 @@
         </ul>
       </script>
     </div>
-   <p>Clicking on your team will redirect you to see only your roster, results and schedule</p>
+   <p>Clicking on your team will redirect you to see just your team's data</p>
   </div>
 
 
