--- a/public/roster.html
+++ b/public/roster.html
@@ -59,7 +59,8 @@
     </script>
   </div>
 
-
+  <div class="bgimg">
+  </div>
 
   <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="main.js"></script>
