--- a/public/teams.html
+++ b/public/teams.html
@@ -41,7 +41,8 @@
    <p>Clicking on your team will redirect you to see just your team's data</p>
   </div>
 
-
+  <div class="bgimg">
+  </div>
   <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="main.js"></script>
 </body>
